--- a/CheckMyMail.csproj
+++ b/CheckMyMail.csproj
@@ -165,11 +165,20 @@
     <Compile Include="CheckDialog.Designer.cs">
       <DependentUpon>CheckDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="CountDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CountDialog.Designer.cs">
+      <DependentUpon>CountDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
     <EmbeddedResource Include="CheckDialog.resx">
       <DependentUpon>CheckDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CountDialog.resx">
+      <DependentUpon>CountDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
