--- a/CheckMyMail.csproj
+++ b/CheckMyMail.csproj
@@ -165,6 +165,7 @@
     <Compile Include="CheckDialog.Designer.cs">
       <DependentUpon>CheckDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Config.cs" />
     <Compile Include="CountDialog.cs">
       <SubType>Form</SubType>
     </Compile>
