Add first cut at GitHub Action support
This automates the buld process using GitHub Action. It generates
an InnoSetup installer as an artifact.

 * This version signs the CheckMyMail VSTO manifest with a self-
   signed cert. This is fine, because we plan to deploy CheckMyMail
   into a trusted location (that is, %ProgramFiles%).

 * We can use the same binary for both 32-bit and 64-bit Offices,
   thanks to the "Any CPU" build target.

Signed-off-by: Fujimoto Seiji <fujimoto@ceptord.net>

--- a/CheckMyMail.csproj
+++ b/CheckMyMail.csproj
@@ -190,7 +190,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="CheckMyMail_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -218,10 +217,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>CheckMyMail_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile></ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>1C8D58275DF8B6349770E9EE59F565357B1518B9</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>1C51E85290B5B45AF04DC5D9F4F59892B3074C80</ManifestCertificateThumbprint>
   </PropertyGroup>
   <!-- Include the build rules for a C# project. -->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
