Highlights checkbox items on mouse hover
This improves the ergonomics of clicking checkbox items.

 * Implement mousehover effects to ListView using MouseMove and
   MouseLeave events.

 * Use double buffering to reduce flickering.

 * Disable native "selected" effect using ItemSelectionChanged event.

Signed-off-by: Fujimoto Seiji <fujimoto@ceptord.net>

--- a/CheckMyMail.csproj
+++ b/CheckMyMail.csproj
@@ -165,6 +165,9 @@
     <Compile Include="CheckDialog.Designer.cs">
       <DependentUpon>CheckDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="CustomListView.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Config.cs" />
     <Compile Include="CountDialog.cs">
       <SubType>Form</SubType>
