Implement on-memory logger
This adds the first cut at a simple logging mechanism.

 - It currently only supports memory backend; Everything
   is stored on memory.

 - It uses Queue to implement a kind of a ring buffer.

While the interface is very crude, this seems to be a sane
way to implement a logger on Outlook. Let's start using it.

Signed-off-by: Fujimoto Seiji <fujimoto@clear-code.com>

--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Dialog\CountDialog.xaml.cs">
       <DependentUpon>CountDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Logger.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
