Add a new configuration mechanism
This overhaul the configuration mechanism:

 - Define two config file formats: "list" and "options"
 - Make everything configurable with files.
 - Add ConfigData class to query options with default values.

Signed-off-by: Fujimoto Seiji <fujimoto@clear-code.com>

--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -164,7 +164,10 @@
   -->
   <ItemGroup>
     <Compile Include="Dialog\Helper.cs" />
-    <Compile Include="Config.cs" />
+    <Compile Include="Config\ConfigData.cs" />
+    <Compile Include="Config\FileLoader.cs" />
+    <Compile Include="Config\Const.cs" />
+    <Compile Include="Config\StandardPath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
