Define how to sign the ClickOnce manifest
... also add a batch script to automate the generation of
signed installers.

Signed-off-by: Fujimoto Seiji <fujimoto@clear-code.com>

--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -246,7 +246,13 @@
     </ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>1C51E85290B5B45AF04DC5D9F4F59892B3074C80</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>1F02225E5C681EFACE0520494285DAF0D24987DF</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestTimestampUrl>http://timestamp.digicert.com</ManifestTimestampUrl>
   </PropertyGroup>
   <!-- Include the build rules for a C# project. -->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
