Add the first cut at internationalization
Move all the UI texts to Resource.resx, so that we can switch the
display language depending on the system locale.

This is a preparation for introducing English/Chinese support to
FlexConfirmMail.

Signed-off-by: Fujimoto Seiji <fujimoto@clear-code.com>

--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -183,13 +183,14 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Ribbon.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="FlexConfirmMail.iss" />
     <None Include="Properties\Settings.settings">
