Migrate to the new Config class
This actually starts using the new configuration system implemented
in the parent commit.

We're already at the point where the old ConfigData and FileLoader
are completely deprecated (they will be removed in the subsequent
commits).

Signed-off-by: Fujimoto Seiji <fujimoto@ceptord.net>

--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -167,8 +167,9 @@
       <DependentUpon>ConfigDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialog\Helper.cs" />
-    <Compile Include="Config\ConfigData.cs" />
-    <Compile Include="Config\FileLoader.cs" />
+    <Compile Include="Config\Config.cs" />
+    <Compile Include="Config\File.cs" />
+    <Compile Include="Config\Loader.cs" />
     <Compile Include="Config\Const.cs" />
     <Compile Include="Config\StandardPath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
