--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Dialog\CountDialog.xaml.cs">
       <DependentUpon>CountDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Global.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Ribbon.cs" />
     <EmbeddedResource Include="Properties\Resources.zh.resx" />
