Revert a needless change

--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -198,7 +198,6 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="FlexConfirmMail.iss" />
-    <None Include="FlexConfirmMail_3_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -249,10 +248,11 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>FlexConfirmMail_3_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>
+    </ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>9890BBEF56F17434001CDAE60CA5534016A5047C</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>73E7B9D1F72EDA033E7A9D6B17BC37A96CE8513A</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
