--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -166,8 +166,8 @@
     <Compile Include="Dialog\ConfigDialog.xaml.cs">
       <DependentUpon>ConfigDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Dialog\ConfirmNewDomainDialog.xaml.cs">
-      <DependentUpon>ConfirmNewDomainDialog.xaml</DependentUpon>
+    <Compile Include="Dialog\NewDomainDialog.xaml.cs">
+      <DependentUpon>NewDomainDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialog\Helper.cs" />
     <Compile Include="Config\Config.cs" />
@@ -225,7 +225,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Dialog\ConfirmNewDomainDialog.xaml">
+    <Page Include="Dialog\NewDomainDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
