--- a/FlexConfirmMail.csproj
+++ b/FlexConfirmMail.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Global.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Ribbon.cs" />
+    <EmbeddedResource Include="Properties\Resources.es.resx" />
     <EmbeddedResource Include="Properties\Resources.zh.resx" />
     <EmbeddedResource Include="Properties\Resources.en.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
